# morph

./: .gitattributes  .gitignore  .ocamlformat  README.md  dune-project  install.sh  morph.opam
.github/workflows/: release.yml
Formula/: morph.rb
bench/: run.sh  type_filter.sh
config/: discover.ml
docs/: demo.tape
examples/demo/: app.ts
examples/mcp/: claude-code.json  codex.toml  cursor.json
lib/grammars/rust/: dune
lib/morph/: cli.ml  dune  ignore.ml  lang.ml  lsp.ml  match_engine.ml  matcher.ml  mcp.ml  morph.ml  pattern.ml  rewriter.ml  ts.ml  ts_stubs.c  type_filter.ml  watch.ml
lib/runtime/: dune
npm/: install.js  package.json
test/: dune  test_morph.ml
test/fixtures/: sample.go  sample.py  sample.rs  sample.ts  tsconfig.json  typed.go  typed.py  typed.ts
